Text-shadow too much light fixed.

--- a/less/delivery.less
+++ b/less/delivery.less
@@ -18,7 +18,7 @@ ul.breadcrumb {
   }
   a {
     color: @general - 50;
-    text-shadow: 1px 1px @contrast;
+    text-shadow: 1px 1px @general + 50;
     text-decoration: none;
   }
 }
